-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
5.3.0
-
None
-
xcb plugin
-
44fc2914be67055bbe609790fb7eaf1a643758e2 (qt/qtbase/5.14)
setting the environment variable QT_FLUSH_PAINT is supposed to give a visual indication of widget repaints for debug builds of Qt. This no longer works in the dev branch, using the xcb plugin. Instead, Qt gives the warning "QWidget::paintEngine: Should no longer be called".
| For Gerrit Dashboard: QTBUG-36435 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 271244,9 | Goodbye showYellowThing | 5.14 | qt/qtbase | Status: MERGED | +2 | 0 |